# bop-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  llms.txt  package.json  ui-design-language.md
.github/workflows/: ci.yml  deploy-docs.yml
bop/: Cargo.toml  README.md
bop-cli/: Cargo.toml  README.md
bop-cli/src/: args.rs  compile.rs  entry_path.rs  main.rs  repl.rs  run.rs
bop-cli/tests/: broken_pipe_e2e.rs  compile_e2e.rs  module_diagnostics_e2e.rs  repl_e2e.rs  runtime_limits_e2e.rs  warnings_e2e.rs
bop-compile/: Cargo.toml  README.md
bop-compile/src/: emit.rs  lib.rs
bop-compile/src/emit/: runtime_templates.rs
bop-compile/tests/: e2e.rs  snapshot.rs  three_way.rs  type_publication_scaling.rs
bop-std/: Cargo.toml  README.md
bop-std/src/: lib.rs
bop-std/src/modules/: json.bop  math.bop  result.bop  test.bop
bop-std/tests/: smoke.rs
bop-sys/: Cargo.toml  README.md
bop-sys/src/: args.rs  env.rs  error.rs  fs.rs  host.rs  lib.rs  stdio.rs  time.rs
bop-vm/: Cargo.toml  README.md
bop-vm/src/: chunk.rs  compiler.rs  disasm.rs  lib.rs  validate.rs  vm.rs
bop-vm/src/compiler/: free_variables.rs  local_resolver.rs  pool_index.rs
bop-vm/tests/: compile_roundtrip.rs  compiler_scaling.rs  differential.rs  instance.rs  invalid_chunks.rs  ref_parameters.rs
bop/src/: ast_visit.rs  builtins.rs  check.rs  error.rs  error_messages.rs  evaluator.rs  formatting.rs  host.rs  instance.rs  lexer.rs  lib.rs  math.rs  memory.rs  methods.rs  naming.rs  ops.rs  parser.rs  precheck.rs  ref_params.rs  stdlib.rs  suggest.rs  value.rs
bop/src/check/: source_order.rs
bop/src/check/source_order/: diagnostics.rs  model.rs
bop/src/modules/: collections.bop  iter.bop  json.bop  math.bop  result.bop  string.bop  test.bop
bop/src/value/: dict_index.rs
bop/src/value_conversion/: error.rs  from_value.rs  into_value.rs  macros.rs  mod.rs
bop/tests/: stdlib_smoke.rs  value_conversions.rs
docs/: book.toml  zola.toml
docs/book/: 404.html  embedding.html  errors.html  highlight-c782337f.js  index.html  introduction.html  modules.html  print.html  repl.html  searcher-c2a407aa.js  searchindex-023d7c23.js  searchindex-06d3552d.js  searchindex-403bd645.js  searchindex-44072e71.js  searchindex-49dea4a1.js  searchindex-4c5f85d8.js  searchindex-59ed6ef3.js  searchindex-7add6b7f.js  searchindex-a6bf7ab9.js  searchindex-a7066e9a.js  searchindex-a90c2256.js  searchindex-c04594b9.js  searchindex-cb35a9ca.js  searchindex-f7770b37.js  toc-3658d16e.js  toc-3d459e96.js  toc-4a0c6a8e.js  toc-c7edef4c.js  toc-d974ebe2.js  toc.html
docs/book/basics/: syntax.html  types.html  variables.html
docs/book/control-flow/: break-continue.html  if-else.html  loops.html  match.html
docs/book/data/: arrays.html  dictionaries.html  strings.html  structs-and-enums.html
docs/book/embedding/: instances.html
docs/book/functions/: defining-functions.html
docs/book/reference/: builtins.html  grammar.html  methods.html  operators.html
docs/book/stdlib/: collections.html  index.html  iter.html  json.html  math.html  result.html  string.html  test.html
docs/content/docs/: _index.md  cli.md  embedding.md  errors.md  modules.md  repl.md  whats-new-0-4.md
docs/content/docs/basics/: _index.md  syntax.md  types.md  variables.md
docs/content/docs/control-flow/: _index.md  break-continue.md  if-else.md  loops.md  match.md
docs/content/docs/data/: _index.md  arrays.md  dictionaries.md  strings.md  structs-and-enums.md
docs/content/docs/embedding/: _index.md  instances.md
docs/content/docs/functions/: _index.md  defining-functions.md  reference-parameters.md
docs/content/docs/reference/: _index.md  builtins.md  grammar.md  methods.md  operators.md
docs/content/docs/stdlib/: _index.md  collections.md  iter.md  json.md  math.md  string.md  test.md
docs/data/: navigation.json
docs/src/: SUMMARY.md  embedding.md  errors.md  introduction.md  modules.md  repl.md
docs/src/basics/: syntax.md  types.md  variables.md
docs/src/control-flow/: break-continue.md  if-else.md  loops.md  match.md
docs/src/data/: arrays.md  dictionaries.md  strings.md  structs-and-enums.md
docs/src/embedding/: instances.md
docs/src/functions/: defining-functions.md
docs/src/reference/: builtins.md  grammar.md  methods.md  operators.md
docs/src/stdlib/: collections.md  index.md  iter.md  json.md  math.md  result.md  string.md  test.md
docs/static/: _headers  _redirects  robots.txt
docs/static/js/: site.js
docs/styles/: site.css
docs/syntaxes/: bop.tmLanguage.json
docs/templates/: 404.html  base.html  index.html  macros.html
docs/templates/docs/: page.html  section.html
docs/templates/partials/: docs-article.html
examples/rust-embedding/: Cargo.toml  README.md  build.rs
examples/rust-embedding/src/: plugin.bop
plans/: execution-modes.md  general-purpose-roadmap.md
scripts/: check-package-licenses.ts  llm-docs.ts  site-assets.ts
specs/: README.md  architecture.md  language-runtime.md  stack.md
specs/proposals/: ref-parameters.md
