[workspace]
members = [
    "bop",
    "bop-cli",
    "bop-compile",
    "bop-sys",
    "bop-vm",
    "examples/rust-embedding",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
# Rust 1.88 is the minimum toolchain for the complete 0.4 workspace,
# including the CLI dependency graph. Keep this in sync with the
# release check documented in CHANGELOG.md and specs/stack.md.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stevepryde/bop-lang"
homepage = "https://github.com/stevepryde/bop-lang"
authors = ["Steve Pryde"]
