[package]
name = "bop-cli"
description = "CLI and REPL for the Bop programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "interpreter", "scripting", "repl"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "bop"
path = "src/main.rs"

[dependencies]
# The CLI always bundles the stdlib — users running `bop run`
# or `bop compile` expect `import std.math` to Just Work.
bop = { version = "0.3.0", path = "../bop", package = "bop-lang", default-features = false, features = ["std", "bop-std"] }
bop-sys = { version = "0.3.0", path = "../bop-sys" }
# The `run` subcommand defaults to the bytecode VM (2–3× faster
# than the tree-walker). `--novm` forces the walker path.
bop-vm = { version = "0.3.0", path = "../bop-vm" }
# `bop compile` emits Rust via the AOT transpiler, then (by
# default) invokes cargo to produce a native binary.
bop-compile = { version = "0.3.0", path = "../bop-compile" }
# Readline-style line editing for the REPL: arrow-key history,
# Ctrl-A/E/K edits, persisted history, and the
# Validator/Completer hooks that drive multi-line input + tab
# completion.
rustyline = { version = "17", features = ["with-file-history"] }
