[package]
name = "bop-compile"
description = "Ahead-of-time Bop to Rust source transpiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "compiler", "aot", "rust"]
categories = ["compilers"]

[lib]
name = "bop_compile"

[dependencies]
bop = { version = "0.3.0", path = "../bop", package = "bop-lang" }

[dev-dependencies]
bop-vm = { version = "0.3.0", path = "../bop-vm" }
bop-std = { path = "../bop-std" }
