[package]
name = "bop-compile"
description = "Ahead-of-time Bop to Rust source transpiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "compiler", "aot", "rust"]
categories = ["compilers"]

[lib]
name = "bop_compile"

[dependencies]
# AOT transpilation always runs on a std host, so we explicitly
# drop `default-features` only to avoid pulling the `bop-std`
# stdlib blob when the transpiler doesn't need it.
bop = { version = "0.3.0", path = "../bop", package = "bop-lang", default-features = false }

[features]
default = ["bop-std"]
# Forwards to bop-lang's `bop-std` feature. On by default so
# AOT compile pipelines see the bundled stdlib; downstream
# consumers can drop it with `default-features = false` if
# they want bop-compile without the stdlib source blob.
bop-std = ["bop/bop-std"]

[dev-dependencies]
bop-vm = { version = "0.3.0", path = "../bop-vm" }
