[package]
name = "bop-sys"
description = "Standard host integration for the Bop programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "interpreter", "scripting", "host"]
categories = ["compilers"]

[lib]
name = "bop_sys"

[dependencies]
bop = { version = "0.3.0", path = "../bop", package = "bop-lang" }
bop-std = { version = "0.3.0", path = "../bop-std" }
