[package]
name = "bop-sys"
description = "Standard host integration for the Bop programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "interpreter", "scripting", "host"]
categories = ["compilers"]

[lib]
name = "bop_sys"

[dependencies]
bop = { version = "0.3.0", path = "../bop", package = "bop-lang", default-features = false, features = ["std"] }

[features]
default = ["bop-std"]
# Forwards to bop-lang's `bop-std` feature. On by default
# because `StdHost` — the whole point of this crate — is a
# "batteries included" host and its `resolve_module` impl
# wants to route `import std.*` through the bundled stdlib.
# Turn off with `default-features = false` if you only need
# the filesystem / stdio / env / time hooks without the
# bundled stdlib blob.
bop-std = ["bop/bop-std"]
