[package]
name = "bop-vm"
description = "Bytecode compiler and stack VM for the Bop programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["language", "interpreter", "bytecode", "vm"]
categories = ["compilers"]

[lib]
name = "bop_vm"

[dependencies]
bop = { version = "0.2.0", path = "../bop", package = "bop-lang", default-features = false }

[features]
default = ["std"]
std = ["bop/std"]
# Forwards to bop-lang's `no_std` feature — enable when
# building for bare-metal / edge wasm / embedded targets. std
# users can ignore this entirely and won't pull libm into
# their dep graph.
no_std = ["bop/no_std"]

[dev-dependencies]
bop-std = { path = "../bop-std" }
