[package]
name = "bop-vm"
description = "Bytecode compiler and stack VM for the Bop programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/bop-vm"
readme = "README.md"
keywords = ["language", "interpreter", "bytecode", "vm"]
categories = ["compilers"]

[lib]
name = "bop_vm"

[dependencies]
bop = { version = "0.4.0", path = "../bop", package = "bop-lang", default-features = false }

[features]
default = ["std", "bop-std"]
# Keeps std-only host behavior enabled and forwards that choice to bop-lang.
# When Cargo unifies `std` and `no_std`, `std` takes precedence.
std = ["bop/std"]
# Forwards to bop-lang's `no_std` feature — opt in when
# building for bare-metal / edge wasm / embedded targets.
# Use it with default features disabled for a genuine no_std build.
no_std = ["bop/no_std"]
# Forwards to bop-lang's `bop-std` feature — bundles the
# Bop standard library (`use std.math`, `std.json`, …) at
# build time. On by default so that `bop_vm::run` with a
# default `BopHost::resolve_module` path resolves `std.*`
# correctly.
bop-std = ["bop/bop-std"]
