[package]
name = "bop-lang"
description = "A small, dynamically-typed programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["language", "interpreter", "scripting", "embedded"]
categories = ["compilers"]

[lib]
name = "bop"

[features]
default = ["bop-std"]
# Bundle the Bop standard library (`use std.math`, `std.json`,
# `std.collections`, `std.iter`, `std.string`, `std.test`) as
# `&'static str` constants the engine can resolve at runtime
# via `bop::stdlib::resolve`. On by default; turn off with
# `default-features = false` for a truly minimal core with no
# bundled modules. The feature name matches the old standalone
# `bop-std` crate — consumers who used to depend on that flip
# `features = ["bop-std"]` on `bop-lang`.
bop-std = []
# Opt in when building for bare-metal / embedded / edge wasm
# targets where Rust's `std` crate isn't available. Pulls in
# the tiny pure-Rust `libm` crate internally so the math
# builtins (`sqrt`, `sin`, `cos`, …) still work — those `f64`
# methods live in `std`, not `core`. Named `no_std` rather
# than `libm` because the *intent* is "I'm targeting a no_std
# environment"; the libm dep is an implementation detail the
# user shouldn't have to know about. Default (std) users never
# see libm in their dep graph.
no_std = ["dep:libm"]

[dependencies]
libm = { version = "0.2", default-features = false, optional = true }
