[package]
name = "bop-rust-embedding-examples"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bop = { package = "bop-lang", path = "../../bop" }
bop-vm = { path = "../../bop-vm" }

[build-dependencies]
bop-compile = { path = "../../bop-compile" }
